# sax

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
packaging/aur/: PKGBUILD
samples/: flatten-sample.tar  sample.7z  sample.tar  sample.tar.bz2  sample.tar.xz  sample.tar.zst  sample.tgz
src/: config.rs  extract.rs  fs_utils.rs  main.rs
