[package]
name = "sax"
version = "0.2.0"
edition = "2024"
description = "A simple but smart archiving and extraction tool."
license = "MIT"
repository = "https://github.com/rahmerh/sax"
readme = "README.md"

[dependencies]
bzip2 = "0.6.1"
flate2 = "1.1.9"
sevenz-rust = "0.6.1"
tar = "0.4.44"
unrar-ng = "0.7"
xz2 = "0.1.7"
zip = "7.0.0"
zstd = "0.13.3"

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.24.0"
